--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,8 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+/patches/client.py.orig
+/patches/server.py.orig
+/patches/client.py
+/patches/server.py
