Remove support for 13.5-RELEASE, Add support for 15 (pkgbase)

--- a/update/README.md.template
+++ b/update/README.md.template
@@ -41,4 +41,4 @@ http://blog.invisiblethings.org/2013/02/21/converting-untrusted-pdfs-into-truste
 | Tag           | Arch    | Version            | Type   |
 | ------------- | --------| ------------------ | ------ |
 | `%%TAG1%%`    | `amd64` | `%%TAG1%%-RELEASE` | `thin` |
-| `%%TAG2%%`    | `amd64` | `%%TAG2%%-RELEASE` | `thin` |
+| `%%TAG2%%`    | `amd64` | `%%TAG2%%` | `thin` |
